--- a/ApiGeneratorApi/ApiGeneratorApi/Web.config
+++ b/ApiGeneratorApi/ApiGeneratorApi/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="OutputFolder" value="..\..\..\..\GeneratedCode"/>
+    <add key="OutputFolder" value="C:\code\Swagenya\GeneratedCode"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
