added some stuff

--- a/ApiGeneratorApi/ApiGeneratorApi/ApiGeneratorApi.csproj
+++ b/ApiGeneratorApi/ApiGeneratorApi/ApiGeneratorApi.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Models\BusinessLogicGenerator.cs" />
     <Compile Include="Models\DataAccessGenerator.cs" />
     <Compile Include="Models\EndPointGenerator.cs" />
+    <Compile Include="Models\FileWriter.cs" />
     <Compile Include="Models\ModelGenerator.cs" />
     <Compile Include="Models\TestGenerator.cs" />
     <Compile Include="Models\WebApiGenerator.cs" />
