--- a/ApiGeneratorApi/ApiGeneratorApi/ApiGeneratorApi.csproj
+++ b/ApiGeneratorApi/ApiGeneratorApi/ApiGeneratorApi.csproj
@@ -83,15 +83,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AngularGenerator.cs" />
+    <Compile Include="Generator\AngularGenerator.cs" />
     <Compile Include="Models\ApiSpecification.cs" />
-    <Compile Include="Models\BusinessLogicGenerator.cs" />
+    <Compile Include="Generator\BusinessLogicGenerator.cs" />
     <Compile Include="Models\DataAccessGenerator.cs" />
-    <Compile Include="Models\EndPointGenerator.cs" />
+    <Compile Include="Generator\EndPointGenerator.cs" />
     <Compile Include="Util\FileWriter.cs" />
-    <Compile Include="Models\ModelGenerator.cs" />
-    <Compile Include="Models\TestGenerator.cs" />
-    <Compile Include="Models\WebApiGenerator.cs" />
+    <Compile Include="Generator\ModelGenerator.cs" />
+    <Compile Include="Generator\TestGenerator.cs" />
+    <Compile Include="Generator\WebApiGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\FolderWriter.cs" />
   </ItemGroup>
