--- a/ApiGeneratorApi/ApiGeneratorApi/ApiGeneratorApi.csproj
+++ b/ApiGeneratorApi/ApiGeneratorApi/ApiGeneratorApi.csproj
@@ -414,6 +414,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\GeneratorController.cs" />
     <Compile Include="Controllers\SpecLoader.cs" />
+    <Compile Include="Generator\StoredProcGenerator.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
