--- a/ApiGeneratorApi/ApiGeneratorApi/Web.config
+++ b/ApiGeneratorApi/ApiGeneratorApi/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="OutputFolder" value="C:\code\Swagenya\GeneratedCode"/>
+    <add key="OutputFolder" value="C:\code\Swagenya\GeneratedCode" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -25,6 +25,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
